Refatoramento e Criação dos Models
Refatoramento: Colocando as principais funções em Auxiliares
Criação dos Models: Onibus, Empresa e Rota

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Buss</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_onibus_view">Ônibus</string>
 
 </resources>
